# ai_hot_news

./: .env.example  .gitattributes  .gitignore  DEPLOY.md  README.md  TUTORIAL.md  config.yaml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_once.py
.github/workflows/: daily-digest.yml
src/: config.py  constants.py  logger.py  models.py  scheduler.py
src/evaluator/: __init__.py  _prompting.py  base.py  deepseek_evaluator.py  json_parser.py  ollama_evaluator.py  openai_evaluator.py  rule_evaluator.py
src/fetcher/: rss_fetcher.py
src/observability/: __init__.py
src/processor/: dedup.py  filter.py
src/publisher/: card_builder.py  feishu.py
src/utils/: redact.py
tests/: test_evaluator.py  test_evaluator_deepseek.py  test_evaluator_ollama.py  test_evaluator_openai.py  test_evaluator_rule.py  test_fetcher.py  test_json_parser.py  test_models.py  test_processor.py  test_publisher.py  test_scheduler.py
